--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,7 @@
 <%- extend("layout") -%>
 
     <h1><%- data.welcome_tag %></h1>
+    <h3>Enjoy amazing content</h3>
     <div class="clock">
         <div class="hands">
             <div class="hour"></div>
